# lunchfork

./: .gitignore  CLAUDE.md  README.md  docker-compose.hitl.yml  docker-compose.sitl.yml  docker-compose.yml
containers/master/: Dockerfile  main.py  requirements.txt
containers/master/pipeline/: clustering.py  particle_filter.py  sliding_window.py
containers/master/static/: index.html
containers/node-hitl/: Dockerfile  main.py  requirements.txt
containers/node-sitl/: Dockerfile  main.py  requirements.txt
containers/sim-engine/: Dockerfile  main.py  requirements.txt
deploy/: config.master.env  config.node.env  install-master.sh  install-node.sh
deploy/systemd/: lunchfork-master.service  lunchfork-node-hitl.service
docs/: architecture.md  deploy-arm.md  messages.md  terrain.md
scripts/: demo_buildings.py  eval.py  eval_powder_dataset.py  export_onnx.py  fetch_terrain.py  run_scenario.py
scripts/scenarios/: convergence_stress.yaml  dual_uav_uhf.yaml  ground_only_uhf.yaml  offset_emitter_uhf.yaml  orbit_uhf.yaml  orbit_vhf.yaml
shared/: pyproject.toml
shared/comm/: __init__.py  mqtt.py  websocket.py
shared/geo/: __init__.py
shared/messages/: __init__.py
shared/models/: __init__.py  grid_likelihood.py  unet_arch.py
training/: generate_dataset.py  generate_friis_dataset.py  generate_powder_dataset.py  train_diffusion.py  train_superres.py  train_unet.py
